--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 # listen address: host:port
-listen = :9090
+listen = :3812
 # run mode: server or client
-mode = client
+mode = server
 # server address to join.
 join = ""
 # work path.
