--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,6 @@ listen = :3812
 # run mode: server or client
 mode = server
 # server address to join.
-join = ""
+join = "http://docker.for.mac.localhost:3812/join"
 # work path.
 path = "./"
